<resources>
    <string name="app_name">AboutMe</string>

    <!--Text-->
    <string name="my_txt">Портретная ориентация</string>
    <string name="surname">Solovyev</string>
    <string name="name">Vasily</string>
    <string name="patronymic">Dmitrievich</string>
    <string name="email">vensy91@gmail.com</string>
    <string name="skill">Skills</string>

    <!--Buttons-->
    <string name="btn_show">Show</string>
    <string name="btn_skill">Skills</string>
    <string name="btn_back">Back</string>

    <!--Hints-->
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_patronymic">Patronymic</string>
    <string name="hint_email">E-mail</string>

    <!--Array-->
    <string-array name="skills">
        <item>Java Level 1</item>
        <item>Java Level 2</item>
        <item>HTML, CSS</item>
    </string-array>

</resources>
