<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context="vensy.aboutme.MainActivity">

    <TextView
        android:textColor="@color/txt_color"
        android:textSize="@dimen/small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_txt"
        android:id="@+id/my_txt"
        android:layout_margin="@dimen/large_margin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:background="@drawable/frame"
        android:gravity="center"
        android:textSize="@dimen/small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_surname"
        android:ems="10"
        android:id="@+id/edit_surname"
        android:layout_below="@id/my_txt"
        android:layout_marginTop="@dimen/large_margin"
        android:padding="@dimen/small_margin"/>

    <EditText
        android:background="@drawable/frame"
        android:gravity="center"
        android:textSize="@dimen/small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:ems="10"
        android:id="@+id/edit_name"
        android:layout_below="@id/edit_surname"
        android:layout_marginTop="@dimen/large_margin"
        android:padding="@dimen/small_margin"/>

    <EditText
        android:background="@drawable/frame"
        android:gravity="center"
        android:textSize="@dimen/small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_patronymic"
        android:ems="10"
        android:id="@+id/edit_patronymic"
        android:layout_below="@id/edit_name"
        android:layout_marginTop="@dimen/large_margin"
        android:padding="@dimen/small_margin"/>

    <EditText
        android:background="@drawable/frame"
        android:gravity="center"
        android:textSize="@dimen/small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:ems="10"
        android:id="@+id/edit_email"
        android:layout_below="@id/edit_patronymic"
        android:layout_marginTop="@dimen/large_margin"
        android:padding="@dimen/small_margin"/>

    <Button
        android:onClick="onBtnClickShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show"
        android:id="@+id/btn_show"
        android:layout_below="@id/edit_email"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_show"
        android:layout_marginTop="@dimen/layout_margin"
        >

        <ImageView
            android:visibility="invisible"
            android:layout_width="@dimen/photo_width"
            android:layout_height="@dimen/photo_height"
            android:id="@+id/photo"
            android:src="@drawable/photo" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:visibility="invisible"
                android:textColor="@color/black"
                android:textSize="@dimen/large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/surname"
                android:layout_margin="@dimen/large_margin" />

            <TextView
                android:visibility="invisible"
                android:textColor="@color/black"
                android:textSize="@dimen/large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/name"
                android:layout_margin="@dimen/large_margin" />

            <TextView
                android:visibility="invisible"
                android:textColor="@color/black"
                android:textSize="@dimen/large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/patronymic"
                android:layout_margin="@dimen/large_margin" />

            <TextView
                android:visibility="invisible"
                android:textColor="@color/blue"
                android:textSize="@dimen/small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/email"
                android:layout_margin="@dimen/large_margin" />

            <Button
                android:visibility="invisible"
                android:onClick="onBtnClickSkill"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_skill"
                android:id="@+id/btn_skill" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
